# oo-a2a-registry

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
examples/: hello_world_agent.py  hello_world_agent_v1.py  registry_server.py
src/a2a_registry/: __init__.py  models.py
src/a2a_registry/client/: __init__.py  config.py  heartbeat.py
src/a2a_registry/server/: __init__.py  app.py  config.py  mcp_server.py  registry.py
tests/: conftest.py  test_client.py  test_mcp.py  test_registry.py  test_server.py  test_versions.py
